# trap-card-game

./: .codepin.local.json  .easignore  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  HUMANS.md  LOBBY_LIFECYCLE.md  QUICKSTART.md  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: ci.yml  device.yml  release.yml
apps/mobile/: app.config.js  app.json  babel.config.js  eas.json  google-services.json  metro.config.js  package.json  playwright.config.ts  playwright.exported.config.ts  tsconfig.json  vitest.config.ts
apps/party/: package.json  tsconfig.json  vitest.config.ts  wrangler.toml
backend/: .env.example  .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/app/: __init__.py  config.py  logger.py  logging_config.py  main.py
backend/app/api/: auth.py  dependencies.py  lobby.py  websocket.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/redis/: __init__.py  client.py
backend/app/services/: __init__.py  auth.py  game.py  lobby.py  notification.py  password.py  pubsub.py
backend/tests/: __init__.py  conftest.py  test_auth_api.py  test_auth_service.py  test_game_service.py  test_lobby_service.py  test_main.py  test_models.py  test_password_service.py  test_pubsub_service.py  test_websocket.py
frontend/: .env.example  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
plans/: implementation-plan.md  migration-expo-cloudflare.md  outline.md  remaining-work.md
(+145 files in other folders)
